force-app/main/default/objects/ScheduledInterviewer__c/ScheduledInterviewer__c.object-meta.xml
<CustomObject>
    <label>Scheduled Interview Panel</label>
    <nameField>
        <displayFormat>SF-Interview-{00000}</displayFormat>
        <label>Scheduled Interview</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ScheduledInterviewer</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>