force-app/main/default/objects/ScheduledInterviewer__c/fields/Actual_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Time__c</fullName>
    <label>Actual Star tTime</label>
    <type>DateTime</type>
</CustomField>