force-app/main/default/objects/ScheduledInterviewer__c/fields/HandshakeInformation__c.field-meta.xml
<CustomField>
    <fullName>HandshakeInformation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Handshake Information</label>
    <referenceTo>HandshakeInformation__c</referenceTo>
    <relationshipName>ScheduledInterviewer</relationshipName>
    <type>Lookup</type>
</CustomField>