force-app/main/default/objects/ScheduledInterviewer__c/fields/HiringPanelMember__c.field-meta.xml
<CustomField>
    <fullName>HiringPanelMember__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>HiringPanelMember</label>
    <referenceTo>HiringPanelMember__c</referenceTo>
    <relationshipName>ScheduledInterviewer</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>