force-app/main/default/objects/ScheduledInterviewer__c/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Interaction</label>
    <referenceTo>Interaction__c</referenceTo>
    <relationshipName>ScheduledInterviewer</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>