force-app/main/default/objects/ScheduledInterviewer__c/fields/Panel_Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Panel_Member_Role__c</fullName>
    <label>Panel Member Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Panel_Member_Role</valueSetName>
    </valueSet>
</CustomField>